Fix text align

--- a/hugo/themes/helix/static/assets/css/saadixl.css
+++ b/hugo/themes/helix/static/assets/css/saadixl.css
@@ -447,6 +447,7 @@ footer{
 
 	.about-content p {
 		font-size: 16px;
+		text-align: left;
 	}
 
 	#about {
